[package]
name = "octseq"
version = "0.3.0-dev"
edition = "2021"
rust-version = "1.65"
authors = ["NLnet Labs <rust-team@nlnetlabs.nl>"]
description = "Abstractions for types representing octet sequences."
documentation = "https://docs.rs/octseq"
homepage = "https://github.com/NLnetLabs/octets/"
readme = "README.md"
keywords = ["octets", "bytes", "generics"]
license = "BSD-3-Clause"

[dependencies]
bytes    = { version = "1", optional = true }
heapless = { version = "0.7", optional = true }
serde    = { version = "1", optional = true }
smallvec = { version = "1", optional = true }

[features]
default = ["std"]
std     = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

