[package]
name = "octseq"
version = "0.6.0"
edition = "2021"
rust-version = "1.87"
authors = ["NLnet Labs <rust-team@nlnetlabs.nl>"]
description = "Abstractions for types representing octet sequences."
documentation = "https://docs.rs/octseq"
repository = "https://github.com/NLnetLabs/octets/"
readme = "README.md"
keywords = ["octets", "bytes", "generics"]
license = "BSD-3-Clause"

[dependencies]
bytes    = { version = "1", optional = true, default-features = false }
heapless = { version = "0.9", optional = true }
serde    = { version = "1", optional = true, default-features = false }
smallvec = { version = "1", optional = true }

[features]
default = ["std"]
alloc   = ["serde?/alloc"]
std     = ["alloc", "bytes?/std", "serde?/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

